--- a/app/src/main/res/layout/shopping_item.xml
+++ b/app/src/main/res/layout/shopping_item.xml
@@ -11,5 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/listPreferredItemHeight"
         android:paddingLeft="10dp"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:clickable="false"
+        android:focusable="false"
+        />
 </LinearLayout>
